# ComfyUI-Lattice-Compositor

./: .ai-rules  .biomeignore  .clinerules  .coverage  .gitignore  .hlint.yaml  .pylintrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.backup.20260110  Changes-12-15.md  EXPORT_DEPENDENCY_GRAPH.md  FEATURE_AUDIT.md  FIX_NPM_CACHE.md  HANDOFF.md  INVENTORY.md  LICENSE  PRD.md  PROBLEMATIC_FILES_TO_REDOWNLOAD.txt  PROJECT_STATUS.md  README.md  SECURITY.md  SECURITY_ARCHITECTURE.md  SECURITY_ASSESSMENT.md  STRAYLIGHT-CONVENTIONS.md  STYLE.md  TYPESCRIPT_TO_PURESCRIPT_MIGRATION.md  WEYL_COMPOSITOR_MASTER_PLAN.md  WEYL_COMPOSITOR_MASTER_SPEC.md  __init__.py  all_python_files_verified.txt  biome.json  cabal.project  component_exports.txt  coverage.xml  fix-terminal-size.sh  fix_checklist_alignment.py  flake.nix  generate_master_checklist.py  (+19 more)
ComfyUI-EnhancedLinksandNodes-main/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  package.json  playwright.config.ts  pyproject.toml  tsconfig.json  vite.config.ts  vitest.config.ts
ComfyUI-EnhancedLinksandNodes-main/.Jules/: bolt.md  palette.md  sentinel.md
ComfyUI-EnhancedLinksandNodes-main/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
ComfyUI-EnhancedLinksandNodes-main/.github/workflows/: publish.yml
ComfyUI-EnhancedLinksandNodes-main/docs/: Browser_Console_Errors.md  DEVELOPMENT.md
ComfyUI-EnhancedLinksandNodes-main/js/: link_animations.js  link_animations.js.map  node_animations.js  node_animations.js.map
ComfyUI-EnhancedLinksandNodes-main/js/chunks/: designer-icUNrL3Y.js  designer-icUNrL3Y.js.map
ComfyUI-EnhancedLinksandNodes-main/src/: comfy.d.ts
ComfyUI-EnhancedLinksandNodes-main/src/core/: config.ts  index.ts  state.ts  timing.ts  types.ts
ComfyUI-EnhancedLinksandNodes-main/src/effects/: index.ts  link-effects.ts  node-effects.ts  types.ts
ComfyUI-EnhancedLinksandNodes-main/src/extensions/: link-animations.ts  node-animations.ts
ComfyUI-EnhancedLinksandNodes-main/src/renderers/: index.ts  link-renderers.ts  marker-shapes.ts
ComfyUI-EnhancedLinksandNodes-main/src/ui/: context-menu.ts  index.ts  settings-utils.ts  settings.ts
ComfyUI-EnhancedLinksandNodes-main/src/utils/: colors.ts  designer.ts  geometry.ts  index.ts  render.ts
ComfyUI-EnhancedLinksandNodes-main/tests/e2e/: extension.spec.ts  visual-regression.spec.ts
ComfyUI-EnhancedLinksandNodes-main/tests/unit/: accessibility.test.ts  colors.test.ts  config.test.ts  effects.test.ts  geometry.test.ts  renderers.test.ts  security.test.ts  settings.test.ts  setup.test.ts  state.test.ts  timing.test.ts
ComfyUI-Lattice-Compositor/: .aider.input.history  INSTALL.md  PRD.md  PRD_COMPREHENSIVE.md  PROJECT_STATUS.md  README.md  VALIDATION_SKIP_FILES.txt  cabal.project  install-requirements.ps1  lattice.cabal  test_file_mappings.csv
ComfyUI-Lattice-Compositor/.bmad/agents/: typescript-dev.md
ComfyUI-Lattice-Compositor/.cursor/rules/: 003_mandatory-workflow.mdc  004_aleph-001-standard-nix.mdc  005_aleph-002-lint.mdc  009_aleph-007-formalization.mdc
ComfyUI-Lattice-Compositor/.github/workflows/: haskell-build.yml
ComfyUI-Lattice-Compositor/BOOTSTRAP/: .gitignore  ADVERSARIAL_BUG_HUNT.md  COMPREHENSIVE_ADVERSARIAL_BUG_HUNT.md  PROJECT_STRUCTURE.md
ComfyUI-Lattice-Compositor/BOOTSTRAP/.claude/: settings.json
ComfyUI-Lattice-Compositor/BOOTSTRAP/scripts/: rules.js
ComfyUI-Lattice-Compositor/BOOTSTRAP/tests/: test-runner.js
ComfyUI-Lattice-Compositor/IMPLEMENTATION/continuity/: config.lean  coset.lean  dice.lean  manifest.lean  toolchain.lean
ComfyUI-Lattice-Compositor/NEWSPECS/: straylight-unified-api.yaml
ComfyUI-Lattice-Compositor/_archived/audits/: ALL_CONSUMER_FILES_LIST.txt  COMPLETE_EXACT_AUDIT.md  COMPLETE_FILE_BY_FILE_AUDIT.md  CRITICAL_TODOS_TRACKING.md  HANDOFF_TO_NEXT_SESSION.md  LAZY_PATTERNS_BAN.md  LAZY_PATTERNS_TEST.json  MASTER_CHECKLIST_ORIGINAL.md  REMAINING_TYPESCRIPT_ERRORS_ANALYSIS.md  TERMINAL_SIZE_FIX.md
ComfyUI-Lattice-Compositor/_archived/migration/: MIGRATION_CHECKLIST.md  MISSING_TYPES_REPORT.md
ComfyUI-Lattice-Compositor/_archived/planning/: COMPASS_INFRASTRUCTURE_COPIED.md  (+2 more)
ComfyUI-Lattice-Compositor/docs/: CI_CD_SETUP.md  DATABASE_MODULAR_ARCHITECTURE.md  FOUNDATION_BASE.md  MCP_SERVER_CONFIG.md  QUICK_START_FOR_NEW_CHAT.md  SCHEMA_SPECIFICATION.md  SECURITY_THREAT_MODEL.md  SYSTEM_MAP.md  TESTING_SETUP_CHECKLIST.md  TEST_STRATEGY.md
ComfyUI-Lattice-Compositor/hooks/: pre-commit
ComfyUI-Lattice-Compositor/mograph/: CLAUDE_CODE_GUIDE.md
ComfyUI-Lattice-Compositor/scripts/: build-haskell.ps1  check-error-messages.sh  check-proofs.sh  check-type-escapes.sh  init-database.js  rule-coverage-matrix.js  rules.js  setup-claude-mcp.sh  start-comfyui-test.sh
ComfyUI-Lattice-Compositor/spec-docs/: SPEC_01_FOUNDATION.md  SPEC_02_TYPES.md  SPEC_08_PARTICLE_SYSTEM.md
IMPLEMENTATION/nix-compile-main/: .gitignore  .nix-compile.dhall.example  HACKING.md  README.md  REVIEW.md  SPECIFICATION.md  flake.nix  nix-compile.cabal
IMPLEMENTATION/s4-main/: .bazelrc  .buckconfig  .buckroot  .clang-format  .gitignore  BUCK  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE.bazel  flake.nix  pyproject.toml
IMPLEMENTATION/slide-main/: .buckconfig  .clang-format  .clang-tidy  .clangd  .gitignore  .rustfmt.toml  .stylua.toml  BUCK  BUILD.dhall  README.md  SPECIFICATION.md  STYLE.md  TYPOGRAPHY.md  cabal.project  fetch-tokenizers.sh  flake.nix  jack-baseten.dhall  prompt.txt  slide.cabal  tokenizer_config.json
leandocs/vibe-proving-with-llms-main/: .gitignore  LICENSE  README.md  proof_rules_and_style.md  pyproject.toml
standalone-edition/: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  cabal.project  flake.nix  hie.yaml  lattice.cabal
standalone-edition/bench/: Main.hs
standalone-edition/docs/: BUILDING.md  QUICK_START.md  landauer.md
standalone-edition/e2e/: package-lock.json  package.json  vitest.config.ts
standalone-edition/lattice-core/: flake.nix
standalone-edition/nix/: flake-module.nix
standalone-edition/specs/: render.openapi.yaml
(+11393 files in other folders)
