cabal-version: 3.8
name: lattice
version: 0.1.0
synopsis: Lattice Compositor - Haskell library (types, state, services, FFI)
description: Core logic ported from TypeScript UI; zero type escapes, Either Text for errors.
license: MIT
license-file: LICENSE
author: Lattice Compositor
maintainer: Lattice Compositor
build-type: Simple

library
  default-language: GHC2021
  hs-source-dirs: src
  exposed-modules:
    Lattice.Database.ChatMessages
    Lattice.Database.DuckDB
    Lattice.Database.ModuleRegistry
    Lattice.Database.Schema
    Lattice.Database.Uuid5
    Lattice.FFI.AnimationState
    Lattice.FFI.AssetState
    Lattice.FFI.AudioKeyframeState
    Lattice.FFI.AudioState
    Lattice.FFI.AudioStemSeparation
    Lattice.FFI.CacheState
    Lattice.FFI.CameraState
    Lattice.FFI.CompositionState
    Lattice.FFI.DatabaseFFI
    Lattice.FFI.DepthflowState
    Lattice.FFI.DecompositionState
    Lattice.FFI.EffectState
    Lattice.FFI.ExpressionEvaluator
    Lattice.FFI.ExpressionState
    Lattice.FFI.FrameInterpolation
    Lattice.FFI.HaskellToPureScript
    Lattice.FFI.HistoryState
    Lattice.FFI.InterpolationState
    Lattice.FFI.KeyframeState
    Lattice.FFI.LayerDefaultsState
    Lattice.FFI.LayerState
    Lattice.FFI.MarkerState
    Lattice.FFI.ModelIntegrity
    Lattice.FFI.ParticlePreferencesState
    Lattice.FFI.ParticleState
    Lattice.FFI.PhysicsState
    Lattice.FFI.PlaybackState
    Lattice.FFI.PresetState
    Lattice.FFI.ProjectState
    Lattice.FFI.ProjectValidation
    Lattice.FFI.SchemaValidation
    Lattice.FFI.SelectionState
    Lattice.FFI.SVGPathParsing
    Lattice.FFI.TextAnimatorState
    Lattice.FFI.ThemeGeneratorFFI
    Lattice.FFI.ThemeState
    Lattice.FFI.TimelineSnapState
    Lattice.FFI.ToastState
    Lattice.FFI.UIState
    Lattice.FFI.ValidationLimitsState
    Lattice.FFI.VideoState
    Lattice.Schema.SharedValidation
    Lattice.Composables.CanvasSelection
    Lattice.Composables.CurveEditorCoords
    Lattice.Composables.CurveEditorDraw
    Lattice.Composables.CurveEditorInteraction
    Lattice.Composables.CurveEditorKeyboard
    Lattice.Composables.CurveEditorView
    Lattice.Composables.Guides
    Lattice.Composables.ShapeDrawing
    Lattice.Composables.SplineInteraction
    Lattice.Composables.SplineUtils
    Lattice.Composables.ViewportControls
    Lattice.Composables.ViewportGuides
    Lattice.Services.AudioStemSeparation
    Lattice.Services.BlendModes
    Lattice.Services.ColorProfile
    Lattice.Services.ExportPipeline
    Lattice.Services.ExpressionEvaluator
    Lattice.Services.FrameInterpolation
    Lattice.Services.JSONValidation
    Lattice.Services.Math3D
    Lattice.Services.MeshWarpDeformation
    Lattice.Services.ModelIntegrity
    Lattice.Services.PathMorphing
    Lattice.Services.PhysicsForces
    Lattice.Services.PhysicsRandom
    Lattice.Services.PhysicsVectorMath
    Lattice.Services.PreprocessorService
    Lattice.Services.PropertyDriver
    Lattice.Services.PropertyEvaluator
    Lattice.Services.ShapeOperations
    Lattice.Services.StateSerializer
    Lattice.Services.TemplateBuilder
    Lattice.Services.TimelineSnap
    Lattice.Services.WorkflowTemplates
    Lattice.State.Animation
    Lattice.State.Animation.Evaluation
    Lattice.State.Animation.Navigation
    Lattice.State.Animation.Playback
    Lattice.State.Animation.Snap
    Lattice.State.Animation.TimelineZoom
    Lattice.State.Animation.Types
    Lattice.State.Animation.WorkArea
    Lattice.State.Asset
    Lattice.State.Audio
    Lattice.State.Audio.Beats
    Lattice.State.Audio.Defaults
    Lattice.State.Audio.Mappings
    Lattice.State.Audio.Stems
    Lattice.State.Audio.Types
    Lattice.State.AudioKeyframe
    Lattice.State.AudioSync
    Lattice.State.Cache
    Lattice.State.Camera
    Lattice.State.Composition
    Lattice.State.Decomposition
    Lattice.State.Depthflow
    Lattice.State.Effect
    Lattice.State.Expression
    Lattice.State.History
    Lattice.State.Keyframe
    Lattice.State.Keyframe.AutoBezier
    Lattice.State.Keyframe.Clipboard
    Lattice.State.Keyframe.CRUD
    Lattice.State.Keyframe.Dimensions
    Lattice.State.Keyframe.Evaluation
    Lattice.State.Keyframe.Expression
    Lattice.State.Keyframe.Helpers
    Lattice.State.Keyframe.Interpolation
    Lattice.State.Keyframe.Property
    Lattice.State.Keyframe.PropertyUpdate
    Lattice.State.Keyframe.Query
    Lattice.State.Keyframe.Timing
    Lattice.State.Keyframe.Types
    Lattice.State.Keyframe.Velocity
    Lattice.State.Layer
    Lattice.State.Layer.Batch
    Lattice.State.Layer.Clipboard
    Lattice.State.Layer.CRUD
    Lattice.State.Layer.Hierarchy
    Lattice.State.Layer.Ordering
    Lattice.State.Layer.Path
    Lattice.State.Layer.Queries
    Lattice.State.Layer.Specialized
    Lattice.State.Layer.Spline
    Lattice.State.Layer.Time
    Lattice.State.Layer.Toggle
    Lattice.State.Layer.Types
    Lattice.State.LayerDefaults
    Lattice.State.Marker
    Lattice.State.Particle
    Lattice.State.ParticlePreferences
    Lattice.State.Physics
    Lattice.State.Playback
    Lattice.State.Preset
    Lattice.State.Project
    Lattice.State.Selection
    Lattice.State.TextAnimator
    Lattice.State.Theme
    Lattice.State.Toast
    Lattice.State.UI
    Lattice.State.ValidationLimits
    Lattice.State.Video
    Lattice.Types.Animation
    Lattice.Types.Assets.Core
    Lattice.Types.Color
    Lattice.Types.Core
    Lattice.Types.Effects.AnimationPresets
    Lattice.Types.Effects.Categories
    Lattice.Types.Effects.Core
    Lattice.Types.Effects.Definitions
    Lattice.Types.Effects.Definitions.BlurSharpen
    Lattice.Types.Effects.Definitions.ColorCorrection
    Lattice.Types.Effects.Definitions.ColorCorrectionAdvanced
    Lattice.Types.Effects.Definitions.Distort
    Lattice.Types.Effects.Definitions.Generate
    Lattice.Types.Effects.Definitions.NoiseGrain
    Lattice.Types.Effects.Definitions.Stylize
    Lattice.Types.Effects.Definitions.StylizeAdvanced
    Lattice.Types.Effects.Definitions.Time
    Lattice.Types.Effects.Definitions.Utility
    Lattice.Types.Effects.Helpers
    Lattice.Types.Layer
    Lattice.Types.LayerData
    Lattice.Types.LayerData3D
    Lattice.Types.LayerDataAsset
    Lattice.Types.LayerDataComplex
    Lattice.Types.LayerDataParticles
    Lattice.Types.LayerDataShapes
    Lattice.Types.LayerDataSpline
    Lattice.Types.LayerDataText
    Lattice.Types.LayerStyles.Core
    Lattice.Types.LayerStyles.Helpers
    Lattice.Types.Masks.Core
    Lattice.Types.Masks.Helpers
    Lattice.Types.MeshWarp.Core
    Lattice.Types.MeshWarp.Helpers
    Lattice.Types.PrecisionLimits
    Lattice.Types.Presets.BuiltInPresets
    Lattice.Types.Presets.Core
    Lattice.Types.Primitives
    Lattice.Types.Project
    Lattice.Types.Shapes.Helpers
    Lattice.Types.Transform
    Lattice.Utils.ArrayUtils
    Lattice.Utils.Base16Theme
    Lattice.Utils.BlackBalance
    Lattice.Utils.CircuitBreaker
    Lattice.Utils.ColorUtils
    Lattice.Utils.Debounce
    Lattice.Utils.Defaults
    Lattice.Utils.ErrorHelpers
    Lattice.Utils.FpsUtils
    Lattice.Utils.Easing
    Lattice.Utils.Icons
    Lattice.Utils.Interpolation
    Lattice.Utils.LabColorUtils
    Lattice.Utils.Logger
    Lattice.Utils.NumericSafety
    Lattice.Utils.Retry
    Lattice.Utils.SchemaValidation
    Lattice.Utils.SecurityHeaders
    Lattice.Utils.TypeGuards
    Lattice.Utils.TypeUtils
    Lattice.Utils.Uuid5
    Lattice.Utils.Validation
  other-modules:
    Lattice.Services.AudioFeatures
    Lattice.Services.ProjectValidation
    Lattice.Services.SVGPathParsing
    Lattice.State.Audio.Queries
  build-depends:
    base >=4.18 && <5,
    aeson >=2.2 && <3,
    bytestring >=0.12 && <0.13,
    containers >=0.6 && <0.7,
    cryptohash-sha1 >=0.11 && <0.12,
    cryptohash-sha256 >=0.11 && <0.12,
    filepath >=1.4 && <1.5,
    hashable >=1.4 && <1.5,
    regex-tdfa >=1.3 && <1.4,
    scientific >=0.3 && <0.4,
    text >=2.0 && <3,
    time >=1.12 && <1.13,
    unordered-containers >=0.2 && <0.3,
    vector >=0.13 && <0.14
