[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lattice-compositor"
version = "0.1.0"
description = "Lattice Compositor - Motion graphics engine for ComfyUI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.0",
    "pillow>=12.1.0",
    "scipy>=1.16.3",
]

[tool.hatchling.build]
packages = ["src/lattice"]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/node_modules", ".venv", "venv", "build", "dist"]
extraPaths = ["src"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = false
reportGeneralTypeIssues = "warning"
reportOptionalMemberAccess = "none"
reportOptionalSubscript = "none"
stubPath = "src/lattice-stubs"

[dependency-groups]
dev = [
    "hypothesis>=6.148.9",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "ty>=0.0.8",
]
