[project]
name = "ComfyUI-EnhancedLinksandNodes"
description = "A visually stunning extension for ComfyUI that adds beautiful, customizable animations to both links and nodes in your workflow, with a focus on performance and customization. Includes an end-of-render animation and a text visibility tool for nodes. No extra packages are required, works with the latest version of ComfyUI, and should be compatible with most workflows. Larger workflows may experience performance issues, especially if you have a lot of nodes and are using a lower end system."
version = "1.0.2"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/AEmotionStudio/ComfyUI-EnhancedLinksandNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "aemotionstudio"
DisplayName = "ComfyUI-EnhancedLinksandNodes"
Icon = ""
