cabal-version: 3.8
name: lattice
version: 0.1.0
synopsis: Lattice Compositor - Haskell library (types, state, services, FFI)
description: Core logic ported from TypeScript UI; zero type escapes, Either Text for errors.
license: MIT
license-file: LICENSE
author: Lattice Compositor
maintainer: Lattice Compositor
build-type: Simple

library
  default-language: GHC2021
  hs-source-dirs:
    leancomfy/haskell
    src/haskell
    src
  exposed-modules:
    -- Core Lattice modules
    Lattice.Actions
    Lattice.Animation
    Lattice.Assets
    Lattice.BlendModes
    Lattice.Camera
    Lattice.CameraTracking
    Lattice.DataAsset
    Lattice.Effects
    Lattice.EffectsPresets
    Lattice.Entities
    Lattice.Enums
    Lattice.Events
    Lattice.Export
    Lattice.LayerData
    Lattice.LayerStyles
    Lattice.Masks
    Lattice.MeshWarp
    Lattice.Metrics
    Lattice.Particles
    Lattice.Physics
    Lattice.Presets
    Lattice.Primitives
    Lattice.Project
    Lattice.Shapes
    Lattice.Spline
    Lattice.TemplateBuilder
    Lattice.Text
    Lattice.Transform
    Lattice.Triggers
    -- Schemas
    Lattice.Schemas.AI.MotionSuggestionSchema
    Lattice.Schemas.Assets.AssetsSchema
    Lattice.Schemas.DataAsset.DataAssetSchema
    Lattice.Schemas.DragDrop.ProjectItemSchema
    Lattice.Schemas.Effects.EffectsSchema
    Lattice.Schemas.Exports.ATISchema
    Lattice.Schemas.Exports.CameraSchema
    Lattice.Schemas.Exports.ControlNetSchema
    Lattice.Schemas.Exports.DepthSchema
    Lattice.Schemas.Exports.FrameSequenceSchema
    Lattice.Schemas.Exports.LightXSchema
    Lattice.Schemas.Exports.MeshDeformSchema
    Lattice.Schemas.Exports.NormalSchema
    Lattice.Schemas.Exports.ParticleSchema
    Lattice.Schemas.Exports.SCAILSchema
    Lattice.Schemas.Exports.TTMSchema
    Lattice.Schemas.Exports.VACESchema
    Lattice.Schemas.Exports.WanMoveSchema
    Lattice.Schemas.Exports.WorkflowParamsSchema
    Lattice.Schemas.Imports.CameraSchema
    Lattice.Schemas.Imports.CameraTrackingSchema
    Lattice.Schemas.Layers.AnimationSchema
    Lattice.Schemas.Layers.LayerDataSchema
    Lattice.Schemas.Layers.LayerSchema
    Lattice.Schemas.Layers.PrimitivesSchema
    Lattice.Schemas.Layers.TransformSchema
    Lattice.Schemas.LayerStyles.LayerStylesSchema
    Lattice.Schemas.Masks.MasksSchema
    Lattice.Schemas.MeshWarp.MeshWarpSchema
    Lattice.Schemas.ComfyUI.Targets
    Lattice.Schemas.Physics.PhysicsSchema
    Lattice.Schemas.Presets.PresetsSchema
    Lattice.Schemas.Project.ProjectSchema
    Lattice.Schemas.Settings.ExportTemplateSchema
    Lattice.Schemas.Settings.ParticlePreferencesSchema
    Lattice.Schemas.Settings.RateLimitsSchema
    Lattice.Schemas.Settings.RecentProjectsSchema
    Lattice.Schemas.Settings.SessionStorageSchema
    Lattice.Schemas.Settings.ThemeSchema
    Lattice.Schemas.Settings.UserSettingsSchema
    Lattice.Schemas.Settings.ValidationLimitsSchema
    Lattice.Schemas.Shapes.ShapesSchema
    Lattice.Schemas.SharedValidation
    Lattice.Schemas.TemplateBuilder.TemplateBuilderSchema
    -- Services
    Lattice.Services.Audio.BlendTransitions
    Lattice.Services.Audio.CurveShaping
    Lattice.Services.Audio.EnvelopeFollower
    Lattice.Services.Audio.SignalProcessing
    Lattice.Services.BlendModes.ColorSpace
    Lattice.Services.BlendModes.Operations
    Lattice.Services.Blur.Directional
    Lattice.Services.Blur.Gaussian
    Lattice.Services.Blur.Radial
    Lattice.Services.Blur.Sharpen
    Lattice.Services.Blur.StackBlur
    Lattice.Services.Color.Conversion
    Lattice.Services.Color.ValueMapping
    Lattice.Services.ColorCorrection.Adjustments
    Lattice.Services.ColorCorrection.Conversions
    Lattice.Services.ColorCorrection.Curves
    Lattice.Services.ColorCorrection.LUT
    Lattice.Services.ColorCorrection.Vignette
    Lattice.Services.ColorSpace.Conversions
    Lattice.Services.ColorSpace.TransferFunctions
    Lattice.Services.CoordinateConversion
    Lattice.Services.Depthflow.Motion
    Lattice.Services.Distort.Interpolation
    Lattice.Services.Distort.Ripple
    Lattice.Services.Distort.Warp
    Lattice.Services.Driver.Transforms
    Lattice.Services.Easing
    Lattice.Services.Effects.BlurDirectional
    Lattice.Services.Effects.BlurGaussian
    Lattice.Services.Effects.ColorAdjustment
    Lattice.Services.Effects.ColorCorrection
    Lattice.Services.Effects.ColorCurves
    Lattice.Services.Effects.ColorGlow
    Lattice.Services.Effects.ColorThreshold
    Lattice.Services.Expressions.JitterExpressions
    Lattice.Services.Expressions.MotionExpressions
    Lattice.Services.Expressions.VectorMath
    Lattice.Services.Flow.Patterns
    Lattice.Services.Interpolation
    Lattice.Services.LayerStyles.AngleOffset
    Lattice.Services.LayerStyles.BevelLighting
    Lattice.Services.LayerStyles.Morphology
    Lattice.Services.LayerTime
    Lattice.Services.Math3D.Lens
    Lattice.Services.Math3D.Mat4
    Lattice.Services.Math3D.Quat
    Lattice.Services.Math3D.Vec3
    Lattice.Services.Mesh.Deformation
    Lattice.Services.Mesh.Delaunay
    Lattice.Services.Noise.SimplexNoise
    Lattice.Services.NumericalIntegration
    Lattice.Services.Particles.Collision
    Lattice.Services.Particles.Emitter
    Lattice.Services.Particles.Forces
    Lattice.Services.Particles.Lifecycle
    Lattice.Services.Particles.Modulation
    Lattice.Services.Particles.SeededRandom
    Lattice.Services.Particles.Shapes
    Lattice.Services.Particles.SubEmitter
    Lattice.Services.Particles.Turbulence
    Lattice.Services.Particles.UpdateLoop
    Lattice.Services.Path.BezierCore
    Lattice.Services.Path.Morphing
    Lattice.Services.Physics.Cloth
    Lattice.Services.Physics.Collision
    Lattice.Services.Physics.ForceFields
    Lattice.Services.Physics.Random
    Lattice.Services.Physics.RigidBody
    Lattice.Services.Physics.Vec2
    Lattice.Services.Physics.VectorMath
    Lattice.Services.Physics.Verlet
    Lattice.Services.Shader.Transition
    Lattice.Services.ShapeOperations.Bezier
    Lattice.Services.ShapeOperations.Generators
    Lattice.Services.ShapeOperations.Point2D
    Lattice.Services.ShapeOperations.Simplify
    Lattice.Services.Stylize.Dither
    Lattice.Services.Stylize.EdgeDetection
    Lattice.Services.Stylize.Halftone
    Lattice.Services.Stylize.SortMetrics
    Lattice.Services.SVGExtrusion.Bounds
    Lattice.Services.SVGExtrusion.CapProfile
    Lattice.Services.SVGExtrusion.Simplify
    Lattice.Services.TextAnimator.Selectors
    Lattice.Services.Time.DisplacementMap
    Lattice.Services.Time.FrameBlending
    Lattice.Services.Time.OpticalFlow
    -- Utils
    Lattice.Utils.ArrayUtils
    Lattice.Utils.ColorUtils
    Lattice.Utils.ErrorHelpers
    Lattice.Utils.FpsUtils
    Lattice.Utils.Icons
    Lattice.Utils.LabColorUtils
    Lattice.Utils.Logger
    Lattice.Utils.NumericSafety
    Lattice.Utils.ResourcePool
    Lattice.Utils.SchemaValidation
    Lattice.Utils.Security
    Lattice.Utils.TypeGuards
    Lattice.Utils.TypeUtils
    Lattice.Utils.Uuid5
    Lattice.Utils.Validation
    -- Aleph modules
    Aleph.Nix
    Aleph.Nix.Derivation
    Aleph.Nix.FFI
    Aleph.Nix.Package
    Aleph.Nix.Packages.AbseilCpp
    Aleph.Nix.Packages.Catch2
    Aleph.Nix.Packages.Cutlass
    Aleph.Nix.Packages.Fmt
    Aleph.Nix.Packages.HelloWrapped
    Aleph.Nix.Packages.Jq
    Aleph.Nix.Packages.Mdspan
    Aleph.Nix.Packages.NlohmannJson
    Aleph.Nix.Packages.Nvidia
    Aleph.Nix.Packages.Rapidjson
    Aleph.Nix.Packages.Spdlog
    Aleph.Nix.Packages.ZlibNg
    Aleph.Nix.Syntax
    Aleph.Nix.Tools
    Aleph.Nix.Tools.Install
    Aleph.Nix.Tools.Jq
    Aleph.Nix.Tools.PatchElf
    Aleph.Nix.Tools.Substitute
    Aleph.Nix.Types
    Aleph.Nix.Value
    Aleph.Script
    Aleph.Script.Clap
    Aleph.Script.Config
    Aleph.Script.Getopt
    Aleph.Script.Nvidia.Config
    Aleph.Script.Nvidia.Container
    Aleph.Script.Nvidia.Versions
    Aleph.Script.Nvidia.Wheel
    Aleph.Script.Oci
    Aleph.Script.Tools
    Aleph.Script.Tools.Bat
    Aleph.Script.Tools.Bwrap
    Aleph.Script.Tools.CMake
    Aleph.Script.Tools.Crane
    Aleph.Script.Tools.Deadnix
    Aleph.Script.Tools.Delta
    Aleph.Script.Tools.Dust
    Aleph.Script.Tools.Fd
    Aleph.Script.Tools.Find
    Aleph.Script.Tools.Grep
    Aleph.Script.Tools.Gzip
    Aleph.Script.Tools.Hyperfine
    Aleph.Script.Tools.Jq
    Aleph.Script.Tools.Ls
    Aleph.Script.Tools.Rg
    Aleph.Script.Tools.Rsync
    Aleph.Script.Tools.Sed
    Aleph.Script.Tools.Statix
    Aleph.Script.Tools.Stylua
    Aleph.Script.Tools.Taplo
    Aleph.Script.Tools.Tar
    Aleph.Script.Tools.Tokei
    Aleph.Script.Tools.Wget
    Aleph.Script.Tools.Xargs
    Aleph.Script.Tools.Zoxide
    Aleph.Script.Vfio
    Aleph.Script.Vm
    Aleph.Script.Vm.Config
    -- Lattice Composables
    Lattice.Composables.CanvasSelection
    Lattice.Composables.CurveEditorCoords
    Lattice.Composables.CurveEditorDraw
    Lattice.Composables.CurveEditorInteraction
    Lattice.Composables.CurveEditorKeyboard
    Lattice.Composables.CurveEditorView
    Lattice.Composables.Guides
    Lattice.Composables.ShapeDrawing
    Lattice.Composables.SplineInteraction
    Lattice.Composables.SplineUtils
    Lattice.Composables.ViewportControls
    Lattice.Composables.ViewportGuides
    -- Lattice Database
    Lattice.Database.ChatMessages
    Lattice.Database.DuckDB
    Lattice.Database.ModuleRegistry
    Lattice.Database.Schema
    Lattice.Database.Uuid5
    -- Lattice FFI (foreign exports for Python/JS interop)
    Lattice.FFI.AnimationState
    Lattice.FFI.AssetState
    Lattice.FFI.AudioKeyframeState
    Lattice.FFI.AudioState
    Lattice.FFI.AudioStemSeparation
    Lattice.FFI.AudioSyncState
    Lattice.FFI.CacheState
    Lattice.FFI.CameraState
    Lattice.FFI.CompositionState
    Lattice.FFI.DatabaseFFI
    Lattice.FFI.DecompositionState
    Lattice.FFI.DepthflowState
    Lattice.FFI.EffectState
    Lattice.FFI.ExpressionEvaluator
    Lattice.FFI.ExpressionState
    Lattice.FFI.FrameInterpolation
    Lattice.FFI.HaskellToPureScript
    Lattice.FFI.HistoryState
    Lattice.FFI.InterpolationState
    Lattice.FFI.KeyframeState
    Lattice.FFI.LayerDefaultsState
    Lattice.FFI.LayerState
    Lattice.FFI.MarkerState
    Lattice.FFI.ModelIntegrity
    Lattice.FFI.ParticlePreferencesState
    Lattice.FFI.ParticleState
    Lattice.FFI.PhysicsState
    Lattice.FFI.PlaybackState
    Lattice.FFI.PresetState
    Lattice.FFI.ProjectState
    Lattice.FFI.ProjectValidation
    Lattice.FFI.SchemaValidation
    Lattice.FFI.SelectionState
    Lattice.FFI.SVGPathParsing
    Lattice.FFI.TextAnimatorState
    Lattice.FFI.ThemeGeneratorFFI
    Lattice.FFI.ThemeState
    Lattice.FFI.TimelineSnapState
    Lattice.FFI.ToastState
    Lattice.FFI.UIState
    Lattice.FFI.ValidationLimitsState
    Lattice.FFI.VideoState
    -- Lattice Schema
    Lattice.Schema.SharedValidation
    -- Lattice Services (src/Lattice)
    Lattice.Services.AudioFeatures
    Lattice.Services.AudioStemSeparation
    Lattice.Services.BlendModes
    Lattice.Services.ColorProfile
    Lattice.Services.ExportPipeline
    Lattice.Services.ExpressionEvaluator
    Lattice.Services.ExpressionHelpers
    Lattice.Services.FrameInterpolation
    Lattice.Services.JitterExpressions
    Lattice.Services.JSONValidation
    Lattice.Services.LoopExpressions
    Lattice.Services.Math3D
    Lattice.Services.MeshWarpDeformation
    Lattice.Services.ModelIntegrity
    Lattice.Services.MotionExpressions
    Lattice.Services.PathMorphing
    Lattice.Services.PhysicsForces
    Lattice.Services.PhysicsRandom
    Lattice.Services.PhysicsVectorMath
    Lattice.Services.PreprocessorService
    Lattice.Services.ProjectValidation
    Lattice.Services.PropertyDriver
    Lattice.Services.PropertyEvaluator
    Lattice.Services.ShapeOperations
    Lattice.Services.StateSerializer
    Lattice.Services.SVGPathParsing
    Lattice.Services.TemplateBuilder
    Lattice.Services.TimelineSnap
    Lattice.Services.VectorMath
    Lattice.Services.WorkflowTemplates
    -- Lattice State
    Lattice.State.Animation
    Lattice.State.Animation.Evaluation
    Lattice.State.Animation.Navigation
    Lattice.State.Animation.Playback
    Lattice.State.Animation.Snap
    Lattice.State.Animation.TimelineZoom
    Lattice.State.Animation.Types
    Lattice.State.Animation.WorkArea
    Lattice.State.Asset
    Lattice.State.Audio
    Lattice.State.Audio.Beats
    Lattice.State.Audio.Defaults
    Lattice.State.Audio.Mappings
    Lattice.State.Audio.Queries
    Lattice.State.Audio.Stems
    Lattice.State.Audio.Types
    Lattice.State.AudioKeyframe
    Lattice.State.AudioSync
    Lattice.State.Cache
    Lattice.State.Camera
    Lattice.State.Composition
    Lattice.State.Decomposition
    Lattice.State.Depthflow
    Lattice.State.Effect
    Lattice.State.Expression
    Lattice.State.History
    Lattice.State.Keyframe
    Lattice.State.Keyframe.AutoBezier
    Lattice.State.Keyframe.Clipboard
    Lattice.State.Keyframe.CRUD
    Lattice.State.Keyframe.Dimensions
    Lattice.State.Keyframe.Evaluation
    Lattice.State.Keyframe.Expression
    Lattice.State.Keyframe.Helpers
    Lattice.State.Keyframe.Interpolation
    Lattice.State.Keyframe.Property
    Lattice.State.Keyframe.PropertyUpdate
    Lattice.State.Keyframe.Query
    Lattice.State.Keyframe.Timing
    Lattice.State.Keyframe.Types
    Lattice.State.Keyframe.Velocity
    Lattice.State.Layer
    Lattice.State.Layer.Batch
    Lattice.State.Layer.Clipboard
    Lattice.State.Layer.CRUD
    Lattice.State.Layer.Hierarchy
    Lattice.State.Layer.Ordering
    Lattice.State.Layer.Path
    Lattice.State.Layer.Queries
    Lattice.State.Layer.Specialized
    Lattice.State.Layer.Spline
    Lattice.State.Layer.Time
    Lattice.State.Layer.Toggle
    Lattice.State.Layer.Types
    Lattice.State.LayerDefaults
    Lattice.State.Marker
    Lattice.State.Particle
    Lattice.State.ParticlePreferences
    Lattice.State.Physics
    Lattice.State.Playback
    Lattice.State.Preset
    Lattice.State.Project
    Lattice.State.Selection
    Lattice.State.TextAnimator
    Lattice.State.Theme
    Lattice.State.Toast
    Lattice.State.UI
    Lattice.State.ValidationLimits
    Lattice.State.Video
    -- Lattice Types
    Lattice.Types.Animation
    Lattice.Types.Assets.Core
    Lattice.Types.Color
    Lattice.Types.Core
    Lattice.Types.Effects.AnimationPresets
    Lattice.Types.Effects.Categories
    Lattice.Types.Effects.Core
    Lattice.Types.Effects.Definitions
    Lattice.Types.Effects.Definitions.BlurSharpen
    Lattice.Types.Effects.Definitions.ColorCorrection
    Lattice.Types.Effects.Definitions.ColorCorrectionAdvanced
    Lattice.Types.Effects.Definitions.Distort
    Lattice.Types.Effects.Definitions.Generate
    Lattice.Types.Effects.Definitions.NoiseGrain
    Lattice.Types.Effects.Definitions.Stylize
    Lattice.Types.Effects.Definitions.StylizeAdvanced
    Lattice.Types.Effects.Definitions.Time
    Lattice.Types.Effects.Definitions.Utility
    Lattice.Types.Effects.Helpers
    Lattice.Types.Layer
    Lattice.Types.LayerData
    Lattice.Types.LayerData3D
    Lattice.Types.LayerDataAsset
    Lattice.Types.LayerDataComplex
    Lattice.Types.LayerDataParticles
    Lattice.Types.LayerDataShapes
    Lattice.Types.LayerDataSpline
    Lattice.Types.LayerDataText
    Lattice.Types.LayerStyles.Core
    Lattice.Types.LayerStyles.Helpers
    Lattice.Types.Masks.Core
    Lattice.Types.Masks.Helpers
    Lattice.Types.MeshWarp.Core
    Lattice.Types.MeshWarp.Helpers
    Lattice.Types.PrecisionLimits
    Lattice.Types.Presets.BuiltInPresets
    Lattice.Types.Presets.Core
    Lattice.Types.Primitives
    Lattice.Types.Project
    Lattice.Types.Shapes.Helpers
    Lattice.Types.Transform
    -- Lattice Utils (src/Lattice)
    Lattice.Utils.Base16Theme
    Lattice.Utils.BlackBalance
    Lattice.Utils.CircuitBreaker
    Lattice.Utils.Debounce
    Lattice.Utils.Defaults
    Lattice.Utils.Easing
    Lattice.Utils.Interpolation
    Lattice.Utils.Retry
    Lattice.Utils.SecurityHeaders
  -- Note: Aleph.Nix.Examples.* are standalone WASM plugins
  -- They export the same 'nix_wasm_init_v1' symbol and cannot be linked together
  -- Build them separately with: ghc -o fib.wasm Aleph/Nix/Examples/Fib.hs
  other-modules:
  build-depends:
    base >=4.18 && <5,
    aeson >=2.2 && <3,
    array >=0.5 && <0.6,
    async >=2.2 && <3,
    bytestring >=0.11 && <0.13,
    containers >=0.6 && <0.8,
    cryptohash-sha1 >=0.11 && <0.12,
    cryptohash-sha256 >=0.11 && <0.12,
    cryptonite >=0.30 && <0.35,
    dhall >=1.41 && <1.43,
    directory >=1.3 && <1.4,
    filepath >=1.4 && <1.6,
    foldl >=1.4 && <1.5,
    hashable >=1.4 && <1.6,
    megaparsec >=9.2 && <10,
    process >=1.6 && <1.7,
    regex-tdfa >=1.3 && <1.4,
    scientific >=0.3 && <0.4,
    shelly >=1.12 && <1.13,
    text >=2.0 && <3,
    time >=1.12 && <1.15,
    unix >=2.7 && <2.9,
    unordered-containers >=0.2 && <0.3,
    vector >=0.13 && <0.14
